<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".menu.Quest.QuestMenu.QuestMenu">

    <TextView
        android:id="@+id/questNameValue"
        android:layout_width="208dp"
        android:layout_height="20dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="15dp"
        android:text="Quest Name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.163"
        app:layout_constraintStart_toEndOf="@+id/questNameText"
        app:layout_constraintTop_toBottomOf="@+id/questMenuTitle" />

    <TextView
        android:id="@+id/questDescriptionValue"
        android:layout_width="206dp"
        android:layout_height="55dp"
        android:layout_marginTop="8dp"
        android:text="description..."
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/questNameValue"
        app:layout_constraintTop_toBottomOf="@+id/questNameValue" />

    <Button
        android:id="@+id/questAbandonButton"
        android:layout_width="93dp"
        android:layout_height="41dp"
        android:layout_marginEnd="140dp"
        android:text="Abandon"
        app:layout_constraintEnd_toStartOf="@+id/questGenerateButton"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/questGenerateButton" />

    <Button
        android:id="@+id/questCreateButton"
        android:layout_width="95dp"
        android:layout_height="40dp"
        android:layout_marginTop="11dp"
        android:text="Create"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/questGenerateButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/questGenerateButton"
        app:layout_constraintTop_toBottomOf="@+id/questGenerateButton"
        app:layout_constraintVertical_bias="0.033" />

    <Button
        android:id="@+id/questTrackButton"
        android:layout_width="93dp"
        android:layout_height="41dp"
        android:layout_marginTop="9dp"
        android:text="Track"
        app:layout_constraintBottom_toBottomOf="@+id/questCreateButton"
        app:layout_constraintEnd_toEndOf="@+id/questAbandonButton"
        app:layout_constraintStart_toStartOf="@+id/questAbandonButton"
        app:layout_constraintTop_toBottomOf="@+id/questAbandonButton" />

    <Button
        android:id="@+id/questGenerateButton"
        android:layout_width="95dp"
        android:layout_height="40dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="40dp"
        android:text="Generate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout2" />

    <TextView
        android:id="@+id/questDescriptionText"
        android:layout_width="84dp"
        android:layout_height="23dp"
        android:layout_marginTop="8dp"
        android:text="Description:"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayout2"
        app:layout_constraintEnd_toEndOf="@+id/questNameText"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/questNameText"
        app:layout_constraintTop_toBottomOf="@+id/questNameText"
        app:layout_constraintVertical_bias="0.024" />

    <TextView
        android:id="@+id/questNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="Quest Name:"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/questNameValue" />

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="409dp"
        android:layout_height="303dp"
        android:layout_marginTop="44dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/questDescriptionValue">

        <ListView
            android:id="@+id/listView"
            android:layout_width="407dp"
            android:layout_height="479dp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/questMenuTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="200dp"
        android:layout_marginTop="16dp"
        android:text="Quest Menu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>